force-app/main/default/objects/Meeting_WF_Role_Policy__c/Meeting_WF_Role_Policy__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Role Policy</label>
    <nameField>
        <displayFormat>WFRP-{00000}</displayFormat>
        <label>Meeting WF Role Policy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Role Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>