force-app/main/default/objects/Meeting_WF_Role_Policy__c/fields/Can_Edit_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Can_Edit_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting WF config</description>
    <label>Can Edit Meeting</label>
    <type>Checkbox</type>
</CustomField>