force-app/main/default/objects/Meeting_WF_Role_Policy__c/fields/Role_Key__c.field-meta.xml
<CustomField>
    <fullName>Role_Key__c</fullName>
    <description>Meeting WF config</description>
    <label>Role Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>